--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-toastify": "^11.0.5",
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
+    "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
